Updated Greenfoot's version number to 3.8.2 ahead of building installers.

--- a/version.properties
+++ b/version.properties
@@ -9,9 +9,9 @@ bluej_rcnumber=4
 
 greenfoot_major=3
 greenfoot_minor=8
-greenfoot_release=1
+greenfoot_release=2
 greenfoot_suffix=
-greenfoot_rcnumber=2
+greenfoot_rcnumber=1
 
 # Change when API has changed in a way that is likely to break some scenarios. 
 # A warning will be shown to the user - update the greenfoot-labels file to
@@ -67,3 +67,4 @@ greenfoot-3.7.0=c835680c-c79d-4285-9107-7f25cab1bbcd
 greenfoot-3.7.1=54bbe388-bd06-4007-8da6-2da5dbdf2174
 greenfoot-3.8.0=41ad39a1-7328-454a-847b-814b0d008df0
 greenfoot-3.8.1=e9f90c70-f233-4193-b697-6830fc31fcbd
+greenfoot-3.8.2=ec9ae584-2781-425a-bedc-d0a58b6a5a5f
